# src/app.ts
@@ -61,7 +61,7 @@ app.use('/docs', apiReference({
 }));
 
 app.use('/api/v1/auth', authRoutes);
-app.use('/api/v1/pos/transactions', transactionRoutes);
+app.use('/api/v1/transactions', transactionRoutes);
 app.use('/api/v1/members', memberRoutes);
 app.use('/api/v1/products', productRoutes);
 app.use('/api/v1/dashboard', dashboardRoutes);
